<resources>
    <string name="app_name">hw_urban_diplom_messenger</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_to_here">New to here?</string>
    <string name="usernsme">Usernsme</string>
    <string name="repeat_the_password">Repeat the password</string>
    <string name="forgot_my_password">Forgot my password</string>
    <string name="send">Send</string>
    <string name="enter_yor_email">Enter your email to receive instructions on password recovery</string>
    <string name="profile">Profile</string>
    <string name="about_app">About App</string>
    <string name="exit">Exit</string>
    <string name="log_out">Log out</string>
    <string name="save">Save</string>
    <string name="age">Age</string>
    <string name="adress">Adress</string>
    <string name="occupation">Occupation</string>
    <string name="last_name">Last name</string>
    <string name="name">Name</string>
    <string name="not_verified">NOT VERIFIED</string>
    <string name="method_of_entry">Method of entry:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="phone">Phone</string>
    <string name="to_call">To call</string>
    <string name="send_an_sms">Send an SMS</string>
    <string name="the_identifier">The identifier:</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="type_your_message">Type your message...</string>
    <string name="shipped">shipped</string>

    <string-array name="country_codes">
        <item>+7</item>
        <item>+375</item>
        <item>+995</item>
    </string-array>

    <array name="country_flags">
        <item>@drawable/rucountrie</item>
        <item>@drawable/blcountrie</item>
        <item>@drawable/grcountrie</item>
    </array>
</resources>